Your commit message

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
-  },
+  "start": "node src/index.js",
+  "dev": "nodemon src/index.js",
+  "build": "cd frontend && npm install && npm run build && cd .. && npm install"
+},
   "keywords": [] ,
   "author": "",
   "type": "module",
